--- a/coffeebreak.html
+++ b/coffeebreak.html
@@ -40,7 +40,8 @@
     <footer>
         <div class="rodape">
             <div class="conteudo-rodape">
-                <a href=""></a>
+                <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><img src="logos/iconfinder_githubpx_85137.png"></a>
+                <a href="https://www.instagram.com/_ps_dream/" target="_blank"><img src="logos/iconfinder_Instagram_1298747.png"></a>
                 <p>Agradecemos por sua visita!!!</p>
                 <span>© 2020</span>
             </div>
