--- a/coffeebreak.html
+++ b/coffeebreak.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/coffeebreak.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://cdn3.iconfinder.com/data/icons/social-70/24/381_-_Social_coffee_cup_icon-512.png" type="image/x-icon">
+    <link rel="shortcut icon"
+        href="https://cdn3.iconfinder.com/data/icons/social-70/24/381_-_Social_coffee_cup_icon-512.png"
+        type="image/x-icon">
 </head>
 
 <body>
@@ -40,8 +42,10 @@
     <footer>
         <div class="rodape">
             <div class="conteudo-rodape">
-                <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><img src="logos/iconfinder_githubpx_85137.png"></a>
-                <a href="https://www.instagram.com/_ps_dream/" target="_blank"><img src="logos/iconfinder_Instagram_1298747.png"></a>
+                <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><img
+                        src="logos/iconfinder_githubpx_85137.png"></a>
+                <a href="https://www.instagram.com/_ps_dream/" target="_blank"><img
+                        src="logos/iconfinder_Instagram_1298747.png"></a>
                 <p>Agradecemos por sua visita!!!</p>
                 <span>© 2020</span>
             </div>
