--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 
 <body>
-    <div class="cabecalho">
+    <div id="top" class="cabecalho">
         <div class="logo">
             <img src="logos/web-logo.png" alt="logo">
         </div>
         <nav class="menu">
             <ul>
-                <li> <a href="#" target="_blank">...</a> </li>
-                <li> <a href="#" target="_blank">Contato</a> </li>
                 <li> <a href="#" target="_blank">Sobre</a> </li>
+                <li> <a href="#" target="_blank">Contato</a> </li>
+                <li> <a href="#" target="_blank">...</a> </li>
             </ul>
         </nav>
     </div>
@@ -47,7 +47,13 @@
                 <a href="https://www.instagram.com/_ps_dream/" target="_blank"><img
                         src="logos/iconfinder_Instagram_1298747.png"></a>
                 <p>Agradecemos por sua visita!!!</p>
-                <span>© 2020</span>
+                <p>Página em constante manutenção.</p>
+                <span>© 2020</span><br>
+                <div class="back-top">
+                    <a href="#top">Topo</a>
+                    <a href="#" target="_blank">Sobre</a>
+                    <a href="#" target="_blank">contato</a>
+                </div>
             </div>
         </div>
     </footer>
