Atualização de link
Atualização do link instagram

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="conteudo-rodape">
                 <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><img
                         src="logos/iconfinder_githubpx_85137.png"></a>
-                <a href="https://www.instagram.com/_ps_dream/" target="_blank"><img
+                <a href="https://www.instagram.com/coffeebreak538/" target="_blank"><img
                         src="logos/iconfinder_Instagram_1298747.png"></a>
                 <p>Agradecemos por sua visita!!!</p>
                 <p>Página em constante manutenção.</p>
