--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="menu">
             <ul>
-                <li> <a href="#" target="_blank">Sobre</a> </li>
+                <li> <a href="sobre.html" target="_blank">Sobre</a> </li>
                 <li> <a href="#" target="_blank">Contato</a> </li>
                 <li> <a href="#" target="_blank">...</a> </li>
             </ul>
@@ -57,7 +57,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
