sobre media queries

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <span>© 2020</span><br>
                 <div class="back-top">
                     <a href="#top">Topo</a>
-                    <a href="#" target="_blank">Sobre</a>
+                    <a href="sobre.html" target="_blank">Sobre</a>
                     <a href="#" target="_blank">contato</a>
                 </div>
             </div>
