--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav class="menu">
             <ul>
                 <li> <a href="sobre.html" target="_blank">Sobre</a> </li>
-                <li> <a href="#" target="_blank">Contato</a> </li>
-                <li> <a href="#" target="_blank">...</a> </li>
+                <li> <a href="#contatos">Contato</a> </li>
+                <li> <a href="#galeria">Galeria</a> </li>
             </ul>
         </nav>
     </div>
@@ -33,7 +33,7 @@
         </div>
     </section>
 
-    <div class="galeria">
+    <div id="galeria" class="galeria">
         <img class="foto" src="background/skycastle.jpg" alt="Castelo" title="Castelo">
 
         <img class="foto" src="background/lost-in-the-space-com-camera-raw---Copia.jpg" alt="#">
@@ -41,7 +41,7 @@
 
     <footer>
         <div class="rodape">
-            <div class="conteudo-rodape">
+            <div id="contatos" class="conteudo-rodape">
                 <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><img
                         src="logos/iconfinder_githubpx_85137.png"></a>
                 <a href="https://www.instagram.com/coffeebreak538/" target="_blank"><img
@@ -52,7 +52,6 @@
                 <div class="back-top">
                     <a href="#top">Topo</a>
                     <a href="sobre.html" target="_blank">Sobre</a>
-                    <a href="#" target="_blank">contato</a>
                 </div>
             </div>
         </div>
