Media queries ajuste

--- a/sobre.html
+++ b/sobre.html
@@ -22,7 +22,7 @@
     </div>
     <div class="container-descricao">
         <div class="descricao">
-            <h3>Se você chegou até aqui, provavelmente quer saber um pouco mais sobre o projeto CoffeBreak… Então
+            <h3>Se você chegou até aqui, provavelmente quer saber um pouco mais sobre o projeto CoffeeBreak… Então
                 vamos lá!</h3>
             <p>Para começar este breve resumo, gostaria de me apresentar.
                 <br>
