Correção da página (index) e página (sobre)

--- a/index.html
+++ b/index.html
@@ -12,26 +12,25 @@
 </head>
 
 <body>
-    <div id="top" class="cabecalho">
-        <div class="logo">
-            <img src="logos/web-logo.png" alt="logo">
+    <header>
+        <div id="top" class="cabecalho">
+                <img src="logos/web-logo.png" alt="logo">
+            <nav class="menu">
+                <ul>
+                    <li> <a href="sobre.html">Sobre</a> </li>
+                    <li> <a href="#contatos">Contato</a> </li>
+                    <li> <a href="#galeria">Galeria</a> </li>
+                </ul>
+            </nav>
         </div>
-        <nav class="menu">
-            <ul>
-                <li> <a href="sobre.html" target="_blank">Sobre</a> </li>
-                <li> <a href="#contatos">Contato</a> </li>
-                <li> <a href="#galeria">Galeria</a> </li>
-            </ul>
-        </nav>
-    </div>
-
-    <section>
-        <div class="subcabecalho">
-            <div class="espacamento">
-                <h2>Sejam bem-vindos ao universo da imaginação!</h2>
+        <section>
+            <div class="subcabecalho">
+                <div class="espacamento">
+                    <h2>Sejam bem-vindos ao universo da imaginação!</h2>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </header>
 
     <div id="galeria" class="galeria">
         <img class="foto" src="background/skycastle.jpg" alt="Castelo" title="Castelo">
