--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
     <link rel="shortcut icon"
         href="https://cdn3.iconfinder.com/data/icons/social-70/24/381_-_Social_coffee_cup_icon-512.png"
         type="image/x-icon">
+    <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <div id="top" class="cabecalho">
-                <img src="logos/web-logo.png" alt="logo">
+            <img src="logos/web-logo.png" alt="logo">
             <nav class="menu">
                 <ul>
-                    <li> <a href="sobre.html">Sobre</a> </li>
-                    <li> <a href="#contatos">Contato</a> </li>
-                    <li> <a href="#galeria">Galeria</a> </li>
+                    <li> <a href="sobre.html"><i class="far fa-id-card"></i> Sobre</a> </li>
+                    <li> <a href="#contatos"><i class="fas fa-mobile-alt"></i> Contatos</a> </li>
+                    <li> <a href="#galeria"><i class="fas fa-images"></i> Galeria</a> </li>
                 </ul>
             </nav>
         </div>
         <section>
             <div class="subcabecalho">
                 <div class="espacamento">
-                    <h2>Sejam bem-vindos ao universo da imaginação!</h2>
+                    <h2>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h2>
                 </div>
             </div>
         </section>
@@ -47,10 +48,14 @@
                         src="logos/iconfinder_Instagram_1298747.png"></a>
                 <p>Agradecemos por sua visita!!!</p>
                 <p>Página em constante manutenção.</p>
-                <span>© 2020</span><br>
-                <div class="back-top">
-                    <a href="#top">Topo</a>
-                    <a href="sobre.html" target="_blank">Sobre</a>
+                <span>Made with <i class="fas fa-heart"></i> & <i class="fas fa-coffee"></i> in Rio de Janeiro ©
+                    2020</span><br>
+                <div class="topo-media">
+                    <a href="#top"><i class="fas fa-angle-double-up"></i></a>
+                </div>
+                <div class="rodape-media">
+                    <a href="#top"><i class="fas fa-arrow-alt-circle-up"></i>Topo</a>
+                    <a href="sobre.html"><i class="fas fa-mug-hot">Sobre</i></a>
                 </div>
             </div>
         </div>
