--- a/sobre.html
+++ b/sobre.html
@@ -9,11 +9,12 @@
     <link rel="shortcut icon"
         href="https://cdn3.iconfinder.com/data/icons/social-70/24/381_-_Social_coffee_cup_icon-512.png"
         type="image/x-icon">
+    <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="voltar">
-        <a href="index.html">Voltar</a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
     </div>
     <div class="container-foto">
         <div class="foto">
@@ -22,8 +23,8 @@
     </div>
     <div class="container-descricao">
         <div class="descricao">
-            <h3>Se você chegou até aqui, provavelmente quer saber um pouco mais sobre o projeto CoffeeBreak… Então
-                vamos lá!</h3>
+            <span class="intro">Se você chegou até aqui, provavelmente quer saber um pouco mais sobre o projeto CoffeeBreak… Então
+                vamos lá!</span>
             <p>Para começar este breve resumo, gostaria de me apresentar.
                 <br>
                 Eu me chamo <b>Carlos Eduardo</b>, moro na cidade do Rio de Janeiro e tenho 24 anos.
@@ -33,16 +34,16 @@
                 Instagram. Devido ao baixo reconhecimento por este tipo de conteúdo no instagram, resolvi aprender um
                 pouco de <b>HTML</b> e <b>CSS</b> para criar um site com minhas idéias sem precisar gastar dinheiro com
                 isso, e publicar meu material. Acabou que me apaixonei pela área e passava horas assistindo vídeos e
-                lendo conteúdos (passava muita raiva também) sobre o assunto. Então com muita prática e paciência, a
-                página vai ganhando vida. Esse foi um breve resumo sobre mim e o intuito deste site.
+                lendo conteúdos sobre o assunto. Esse foi um breve resumo sobre mim e o intuito deste site.
             </p>
         </div>
     </div>
 
     <footer>
         <div class="rodape">
-            <p>Página em constante manutenção</p>
-            <p>© 2020</p>
+            <span>Made with <i class="fas fa-heart"></i> & <i class="fas fa-coffee"></i> in Rio de Janeiro by Carlos Eduardo ©
+                2020</span>
+
         </div>
 
     </footer>
