atualização página (sobre)

--- a/sobre.html
+++ b/sobre.html
@@ -23,25 +23,40 @@
     </div>
     <div class="container-descricao">
         <div class="descricao">
-            <span class="intro">Se você chegou até aqui, provavelmente quer saber um pouco mais sobre o projeto CoffeeBreak… Então
-                vamos lá!</span>
+            <div class="intro">
+                <span>Se você chegou até aqui, provavelmente quer saber um pouco mais sobre o projeto
+                    CoffeeBreak…
+                    <br>
+                    Então vamos lá!</span>
+            </div>
+
             <p>Para começar este breve resumo, gostaria de me apresentar.
                 <br>
-                Eu me chamo <b>Carlos Eduardo</b>, moro na cidade do Rio de Janeiro e tenho 24 anos.
-                <br>
-                No final de 2018, tive um breve contato com a ferramenta <b>PhotoShop</b>, em um emprego que tive em uma
-                LanHouse, desde então resolvi estudar por completo a ferramenta e postar minhas manipulações no
-                Instagram. Devido ao baixo reconhecimento por este tipo de conteúdo no instagram, resolvi aprender um
-                pouco de <b>HTML</b> e <b>CSS</b> para criar um site com minhas idéias sem precisar gastar dinheiro com
-                isso, e publicar meu material. Acabou que me apaixonei pela área e passava horas assistindo vídeos e
-                lendo conteúdos sobre o assunto. Esse foi um breve resumo sobre mim e o intuito deste site.
+                Olá, eu me chamo <b>Carlos Eduardo.</b> Moro na cidade do Rio de Janeiro, tenho 24 anos e sou apaixonado
+                por tecnologia <i class="fas fa-laptop"></i> e animais <i class="fas fa-dog"></i></p>
+
+            <p> No final de 2018, tive um breve contato com a ferramenta <b>PhotoShop</b>, em um emprego que tive em uma
+                LanHouse, gostei da experiência e desde então resolvi estudar por completo a ferramenta e postar minhas
+                manipulações no Instagram. Mas devido ao baixo reconhecimento por este tipo de conteúdo no instagram,
+                resolvi aprender um pouco de <b>html</b> e <b>css</b> para criar um site com minhas ideias sem precisar
+                gastar dinheiro com isso, e assim, publicar meu material… Acabou que adorei a área e decidi me
+                aprofundar
+                mais no assunto.</p>
+
+            <p> Assistindo um canal no YouTube, conheci uma pataforma chamada <a href="https://www.alura.com.br/"
+                    target="_blank"><i>Alura</i></a>, que estava disponibilizando um curso gratuito de
+                <b>html</b> e <b>css</b>… não pensei duas vezes e fiz minha inscrição na hora. começei a estudar e por
+                em prática tudo de novo que estava aprendendo. E assim, aos poucos, o site vai ganhando seu conteúdo e
+                criando mais vida.
             </p>
+
         </div>
     </div>
 
     <footer>
         <div class="rodape">
-            <span>Made with <i class="fas fa-heart"></i> & <i class="fas fa-coffee"></i> in Rio de Janeiro by Carlos Eduardo ©
+            <span>Made with <i class="fas fa-heart"></i> & <i class="fas fa-coffee"></i> in Rio de Janeiro by Carlos
+                Eduardo ©
                 2020</span>
 
         </div>
