--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div id="top" class="cabecalho">
+        <div class="cabecalho">
             <img src="logos/web-logo.png" alt="logo">
             <nav class="menu">
                 <ul>
@@ -25,7 +25,7 @@
             </nav>
         </div>
         <section>
-            <div class="subcabecalho">
+            <div id="top" class="subcabecalho">
                 <div class="espacamento">
                     <h2>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h2>
                 </div>
@@ -34,9 +34,15 @@
     </header>
 
     <div id="galeria" class="galeria">
-        <img class="foto" src="background/skycastle.jpg" alt="Castelo" title="Castelo">
+        <img class="foto" src="background/skycastle.jpg" alt="Castelo">
 
-        <img class="foto" src="background/lost-in-the-space-com-camera-raw---Copia.jpg" alt="#">
+        <img class="foto" src="background/lost-in-the-space-com-camera-raw---Copia.jpg" alt="homen em um foguete">
+
+        <img class="foto" src="background/skate-mar-aberto.jpg" alt="skate no mar">
+
+        <img class="foto" src="background/diagonal5.jpg" alt="Beco Diagonal">
+
+
     </div>
 
     <footer>
