--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 <body>
     <header>
         <div class="cabecalho">
-            <img src="logos/web-logo.png" alt="logo">
+            <a href="#"> <img src="logos/web-logo.png" alt="logo"></a>
             <nav class="menu">
                 <ul>
-                    <li> <a href="sobre.html"><i class="far fa-id-card"></i> Sobre</a> </li>
-                    <li> <a href="#contatos"><i class="fas fa-mobile-alt"></i> Contatos</a> </li>
-                    <li> <a href="#galeria"><i class="fas fa-images"></i> Galeria</a> </li>
+                    <li> <a href="sobre.html">Sobre</a> </li>
+                    <li> <a href="#contatos">Contatos</a> </li>
+                    <li> <a href="#galeria">Galeria</a> </li>
                 </ul>
             </nav>
         </div>
         <section>
             <div id="top" class="subcabecalho">
-                <div class="espacamento">
-                    <h2>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h2>
+                <div class="subtitle">
+                    <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h1>
                 </div>
             </div>
         </section>
@@ -40,9 +40,7 @@
 
         <img class="foto" src="background/skate-mar-aberto.jpg" alt="skate no mar">
 
-        <img class="foto" src="background/diagonal5.jpg" alt="Beco Diagonal">
-
-
+        <img class="foto" src="background/medieval.jpg" alt="Medieval">
     </div>
 
     <footer>
@@ -56,13 +54,17 @@
                 <p>Página em constante manutenção.</p>
                 <span>Made with <i class="fas fa-heart"></i> & <i class="fas fa-coffee"></i> in Rio de Janeiro ©
                     2020</span><br>
+
                 <div class="topo-media">
                     <a href="#top"><i class="fas fa-angle-double-up"></i></a>
                 </div>
+
+
                 <div class="rodape-media">
                     <a href="#top"><i class="fas fa-arrow-alt-circle-up"></i>Topo</a>
                     <a href="sobre.html"><i class="fas fa-mug-hot">Sobre</i></a>
                 </div>
+
             </div>
         </div>
     </footer>
