--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="cabecalho">
+        <div id="top" class="cabecalho">
             <a href="#"> <img src="logos/web-logo.png" alt="logo"></a>
             <nav class="menu">
                 <ul>
@@ -25,7 +25,7 @@
             </nav>
         </div>
         <section>
-            <div id="top" class="subcabecalho">
+            <div class="subcabecalho">
                 <div class="subtitle">
                     <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h1>
                 </div>
@@ -33,39 +33,78 @@
         </section>
     </header>
 
-    <div id="galeria" class="galeria">
-        <img class="foto" src="background/skycastle.jpg" alt="Castelo">
+    <!--Começo da galeria de imagens-->
+    <div id="galeria" class="container-galeria">
 
-        <img class="foto" src="background/lost-in-the-space-com-camera-raw---Copia.jpg" alt="homen em um foguete">
+        <figure class="imagem">
+            <a target="_blank" href="background/skycastle.jpg">
+                <img class="foto" src="background/skycastle.jpg" alt="Castelo">
+            </a>
+            <figcaption>
+                <span>Castelo nas nuvens</span>
+            </figcaption>
+        </figure>
 
-        <img class="foto" src="background/skate-mar-aberto.jpg" alt="skate no mar">
+        <figure class="imagem">
+            <a target="_blank" href="background/lost-in-the-space-com-camera-raw---Copia.jpg">
+                <img class="foto" src="background/lost-in-the-space-com-camera-raw---Copia.jpg"
+                    alt="homen em um foguete">
+            </a>
+            <figcaption>
+                <span>Ao céu e avante!</span>
+            </figcaption>
+        </figure>
 
-        <img class="foto" src="background/medieval.jpg" alt="Medieval">
+        <figure class="imagem">
+            <a target="_blank" href="background/skate-mar-aberto.jpg">
+                <img class="foto" src="background/skate-mar-aberto.jpg" alt="skate no mar">
+            </a>
+            <figcaption>
+                <span>Skate é criatividade</span>
+            </figcaption>
+        </figure>
+
+        <figure class="imagem">
+            <a target="_blank" href="background/medieval.jpg">
+                <img class="foto" src="background/medieval.jpg" alt="Medieval">
+            </a>
+            <figcaption>
+                <span>apreciando a vista</span>
+            </figcaption>
+        </figure>
+
+        <figure class="imagem">
+            <a target="_blank" href="background/florest2.jpg">
+                <img class="foto" src="background/florest2.jpg" alt="Mulher observando uma fogueira">
+            </a>
+            <figcaption>
+                <span>Olhar atento</span>
+            </figcaption>
+        </figure>
     </div>
+    <!--Fim galeria-->
 
+    <!--Rodapé-->
     <footer>
-        <div class="rodape">
-            <div id="contatos" class="conteudo-rodape">
-                <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><img
-                        src="logos/iconfinder_githubpx_85137.png"></a>
-                <a href="https://www.instagram.com/coffeebreak538/" target="_blank"><img
-                        src="logos/iconfinder_Instagram_1298747.png"></a>
-                <p>Agradecemos por sua visita!!!</p>
-                <p>Página em constante manutenção.</p>
-                <span>Made with <i class="fas fa-heart"></i> & <i class="fas fa-coffee"></i> in Rio de Janeiro ©
-                    2020</span><br>
 
-                <div class="topo-media">
-                    <a href="#top"><i class="fas fa-angle-double-up"></i></a>
-                </div>
+        <div id="contatos" class="conteudo-rodape">
+            <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><img
+                    src="logos/iconfinder_githubpx_85137.png"></a>
+            <a href="https://www.instagram.com/coffeebreak538/" target="_blank"><img
+                    src="logos/iconfinder_Instagram_1298747.png"></a>
+            <p id="report">Reporte bugs encontrados <a
+                    href="mailto:carlosmelo1295@gmail.com">carlosmelo1295@gmail.com</a></p>
+            <span>Agradecemos por sua visita!!! Página em constante manutenção.</span>
+            <br>
+            <span>Made with <i class="fas fa-heart"></i> & <i class="fas fa-coffee"></i> in Rio de Janeiro ©
+                2020</span>
+            <br>
 
-
-                <div class="rodape-media">
-                    <a href="#top"><i class="fas fa-arrow-alt-circle-up"></i>Topo</a>
-                    <a href="sobre.html"><i class="fas fa-mug-hot">Sobre</i></a>
-                </div>
-
+            <div class="rodape-media">
+                <a href="#top"><i class="fas fa-arrow-alt-circle-up"></i>Topo</a>
+                <a href="sobre.html"><i class="fas fa-mug-hot">Sobre</i></a>
             </div>
+
         </div>
     </footer>
 </body>
