--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
 <body>
     <header>
         <div id="top" class="cabecalho">
-            <a href="#"> <img src="logos/web-logo.png" alt="logo"></a>
-            <nav class="menu">
-                <ul>
-                    <li> <a href="sobre.html">Sobre</a> </li>
-                    <li> <a href="#contatos">Contatos</a> </li>
-                    <li> <a href="#galeria">Galeria</a> </li>
-                </ul>
-            </nav>
+            <a href="index.html"> <img src="logos/web-logo.png" alt="logo"></a>
+
+            <ul class="menu">
+                <li><a href="sobre.html" target="_blank">Sobre</a></li>
+                <li><a href="#galeria">galeria</a>
+                    <ul>
+                        <li><a href="#">Paisagens</a></li>
+                        <li><a href="#">Fantasia</a></li>
+                        <li><a href="#">Design</a></li>
+                    </ul>
+                </li>
+                <li><a href="#contatos">Contato</a></li>
+
         </div>
+
         <section>
             <div class="subcabecalho">
                 <div class="subtitle">
@@ -33,55 +39,67 @@
         </section>
     </header>
 
-    <!--Começo da galeria de imagens-->
-    <div id="galeria" class="container-galeria">
-
-        <figure class="imagem">
-            <a target="_blank" href="background/skycastle.jpg">
-                <img class="foto" src="background/skycastle.jpg" alt="Castelo">
-            </a>
-            <figcaption>
-                <span>Castelo nas nuvens</span>
-            </figcaption>
-        </figure>
-
-        <figure class="imagem">
-            <a target="_blank" href="background/lost-in-the-space-com-camera-raw---Copia.jpg">
-                <img class="foto" src="background/lost-in-the-space-com-camera-raw---Copia.jpg"
-                    alt="homen em um foguete">
-            </a>
-            <figcaption>
-                <span>Ao céu e avante!</span>
-            </figcaption>
-        </figure>
-
-        <figure class="imagem">
-            <a target="_blank" href="background/skate-mar-aberto.jpg">
-                <img class="foto" src="background/skate-mar-aberto.jpg" alt="skate no mar">
-            </a>
-            <figcaption>
-                <span>Skate é criatividade</span>
-            </figcaption>
-        </figure>
-
-        <figure class="imagem">
-            <a target="_blank" href="background/medieval.jpg">
-                <img class="foto" src="background/medieval.jpg" alt="Medieval">
-            </a>
-            <figcaption>
-                <span>apreciando a vista</span>
-            </figcaption>
-        </figure>
-
-        <figure class="imagem">
-            <a target="_blank" href="background/florest2.jpg">
-                <img class="foto" src="background/florest2.jpg" alt="Mulher observando uma fogueira">
-            </a>
-            <figcaption>
-                <span>Olhar atento</span>
-            </figcaption>
-        </figure>
     </div>
+    <!--Começo da galeria de imagens-->
+    <section>
+        <div id="galeria" class="container-galeria">
+
+            <figure class="imagem">
+                <a target="_blank" href="background/skycastle.jpg">
+                    <img class="foto" src="background/skycastle.jpg" alt="Castelo">
+                </a>
+                <figcaption>
+                    <span>Castelo nas nuvens</span>
+                </figcaption>
+            </figure>
+
+            <figure class="imagem">
+                <a target="_blank" href="background/lost-in-the-space-com-camera-raw---Copia.jpg">
+                    <img class="foto" src="background/lost-in-the-space-com-camera-raw---Copia.jpg"
+                        alt="homen em um foguete">
+                </a>
+                <figcaption>
+                    <span>Ao céu e avante!</span>
+                </figcaption>
+            </figure>
+
+            <figure class="imagem">
+                <a target="_blank" href="background/skate-mar-aberto.jpg">
+                    <img class="foto" src="background/skate-mar-aberto.jpg" alt="skate no mar">
+                </a>
+                <figcaption>
+                    <span>Skate é criatividade</span>
+                </figcaption>
+            </figure>
+
+            <figure class="imagem">
+                <a target="_blank" href="background/medieval.jpg">
+                    <img class="foto" src="background/medieval.jpg" alt="Medieval">
+                </a>
+                <figcaption>
+                    <span>apreciando a vista</span>
+                </figcaption>
+            </figure>
+
+            <figure class="imagem">
+                <a target="_blank" href="background/florest2.jpg">
+                    <img class="foto" src="background/florest2.jpg" alt="Mulher observando uma fogueira">
+                </a>
+                <figcaption>
+                    <span>Olhar atento</span>
+                </figcaption>
+            </figure>
+
+            <figure class="imagem">
+                <a target="_blank" href="background/magicselect.jpg">
+                    <img class="foto" src="background/magicselect.jpg" alt="Magia">
+                </a>
+                <figcaption>
+                    <span>Inspirado na saga Harry potter</span>
+                </figcaption>
+            </figure>
+        </div>
+    </section>
     <!--Fim galeria-->
 
     <!--Rodapé-->
