--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang='pt-br'>
 
 <head>
     <title>CoffeeBreak</title>
@@ -10,6 +10,7 @@
         href="https://cdn3.iconfinder.com/data/icons/social-70/24/381_-_Social_coffee_cup_icon-512.png"
         type="image/x-icon">
     <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -18,7 +19,7 @@
             <a href="index.html"> <img src="logos/web-logo.png" alt="logo"></a>
 
             <ul class="menu">
-                <li><a href="sobre.html" target="_blank">Sobre</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="#galeria">galeria</a>
                     <ul>
                         <li><a href="#">Paisagens</a></li>
@@ -108,7 +109,7 @@
         <div id="contatos" class="conteudo-rodape">
             <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><img
                     src="logos/iconfinder_githubpx_85137.png"></a>
-            <a href="https://www.instagram.com/coffeebreak538/" target="_blank"><img
+            <a href="https://www.instagram.com/coffeebreak.art/" target="_blank"><img
                     src="logos/iconfinder_Instagram_1298747.png"></a>
             <p id="report">Reporte bugs encontrados <a
                     href="mailto:carlosmelo1295@gmail.com">carlosmelo1295@gmail.com</a></p>
