--- a/sobre.html
+++ b/sobre.html
@@ -18,14 +18,8 @@
 
     <div class="barratopo">
         <ul class="menu">
-            <li><a href="index.html">Voltar</a></li>
+            <li><i class="fas fa-home"></i><a href="index.html">Início</a></li>
             <!-- div para criar uma parra vertical no menu-->
-            <div class="barravertical">
-            </div>
-            <li><a href="#">Copyright</a></li>
-            <div class="barravertical">
-            </div>
-            <li><a href="#vista">Aprecie a vista</a></li>
         </ul>
     </div>
 
@@ -41,16 +35,16 @@
                     apaixonado
                     por tecnologia <i class="fas fa-laptop"></i> e animais. <i class="fas fa-dog"></i></p>
 
-                <p> No final de 2018 tive um breve contato com a ferramenta PhotoShop em um emprego que
+                <p> No final de 2018 tive um breve contato com a ferramenta PhotoShop em um trabalho que
                     tive em uma
-                    LanHouse, gostei da experiência e desde então resolvi estudar por completo a ferramenta e postar
+                    LanHouse, gostei bastante da experiência e desde então resolvi estudar por completo a ferramenta e postar
                     minhas
-                    manipulações no Instagram, Mas devido ao baixo reconhecimento por este tipo de conteúdo na
+                    manipulações no Instagram, mas devido ao baixo reconhecimento por este tipo de conteúdo na
                     plataforma,
                     resolvi aprender um pouco de desenvolvimento web para criar um site com minhas ideias sem
                     precisar
-                    gastar dinheiro com isso, e assim, publicar meu material e aprender algo novo durante a
-                    quarentena, Acabou que achei incrível e decidi me
+                    gastar dinheiro com isso e, assim, publicar meu material e aprender algo novo durante a
+                    quarentena, mas acabou que achei incrível e decidi me
                     aprofundar
                     mais no assunto e estudar pra valer.</p>
             </div>
@@ -62,21 +56,17 @@
             <div class="box-sobre-site">
 
                 <p>A curto prazo o projeto CoffeBreak foi criado com o intuito de divulgar manipulações criadas por mim
-                    com o Photoshop, mas durante o desenvolvimento da página, me veio os seguintes planos em mente; E se
-                    ao invés de publicar fotos feitas só por mim, também tivesse um espaço para artistas que querem
+                    com o Photoshop, mas durante o desenvolvimento da página me veio os seguintes planos em mente: E se
+                    ao invés de publicar fotos feitas só por mim, também tivesse um espaço para artistas? que queiram
                     divulgar seu trabalho de forma simples, sem gastar com isso e em uma plataforma totalmente
-                    brasileira? aonde os artistas tenham total reconhecimento pelo seu trabalho, e assim, encontrar o
-                    combustível para se manter motivados.
+                    brasileira aonde os artistas tenham total reconhecimento pelo seu trabalho, e assim, encontrar o
+                    combustível para que se mantenham motivados.
                 </p>
 
 
             </div>
         </div>
     </article>
-
-    <div id="vista" class="vista">
-        <span>Aprecie a vista antes de sair!</span>
-    </div>
 
     <footer>
         <div class="rodape">
