--- a/direitos.html
+++ b/direitos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/direitos.css">
+    <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
 
 <body>
