--- a/sobre.html
+++ b/sobre.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/sobre.css">
     <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon"
-        href="https://cdn3.iconfinder.com/data/icons/social-70/24/381_-_Social_coffee_cup_icon-512.png"
-        type="image/x-icon">
+    <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
     <script src="scripts/script.js"></script>
 </head>
 
